# upsb_v4

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs
src/: bbcode.rs  filters.rs  main.rs  view.rs
src/models/: forums.rs  members.rs  mod.rs  posts.rs  threads.rs  topics.rs
statics/: main.css
templates/: error.rs.html  footer.rs.html  forum.rs.html  member.rs.html  page.rs.html  thread.rs.html  topic.rs.html
