[package]
name = "upsb_four"
version = "0.1.0"
authors = ["Andrew Vy <andrew@andrewvy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", default_features = false, features = ["chrono", "sqlite", "runtime-tokio", "macros"] }
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["full"] }
mime = "0.3.16"
anyhow = "1.0.31"
dotenv = "0.15.0"
chrono = "0.4.11"
htmlescape = "0.3.1"
lazy_static = "1.4.0"
regex = "1.3.9"

[build-dependencies]
ructe = { version = "0.11.4", features = ["warp02"] }
